--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,10 @@ form {
     margin: 45px 0 35px 0;
 }
 #search:hover, #search:focus {
-    box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+    box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);    
+    outline: none;
 }
-button {
+button.searchform {
     border-radius: 2px;
     background-color: #f2f2f2;
     color: rgb(109, 109, 109);
@@ -86,13 +87,16 @@ button {
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
 }
-button:hover {
+button.searchform:hover {
     background-color: #f8f8f8;
     border: 1px solid rgb(224, 224, 224);
 }
-.sign_in {
+button.sign_in {
+    border-radius: 2px;
     background: -moz-linear-gradient(top,#4387fd,#4683ea);
     color: white;
+    padding: 10px;
+    border: none;
     font-size: small;
     font-weight: bold;
     margin-right: 30px;
