--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,17 @@ body {
     height: 30px;
     width: 30px;
 }
+.sign_in {
+    border-radius: 2px;
+    background: linear-gradient(#4387fd,#4683ea);
+    color: white;
+    padding: 10px;
+    border: none;
+    font-size: small;
+    font-weight: bold;
+    margin-right: 30px;
+    margin-left: 12px;
+}
 .logo {
     width: 272px;
     height: 72px;
@@ -77,7 +88,7 @@ form {
     box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);    
     outline: none;
 }
-button.searchform {
+.searchform {
     border-radius: 2px;
     background-color: #f2f2f2;
     color: rgb(109, 109, 109);
@@ -87,20 +98,9 @@ button.searchform {
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
 }
-button.searchform:hover {
+.searchform:hover {
     background-color: #f8f8f8;
     border: 1px solid rgb(224, 224, 224);
-}
-button.sign_in {
-    border-radius: 2px;
-    background: -moz-linear-gradient(top,#4387fd,#4683ea);
-    color: white;
-    padding: 10px;
-    border: none;
-    font-size: small;
-    font-weight: bold;
-    margin-right: 30px;
-    margin-left: 12px;
 }
 .footer ul {
     list-style-type: none;
